# bb-inspector

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/web-inspector/: main.css  main.js
src/BattleBrothersInspector/: CMakeLists.txt  Common.cpp  IBrowser.h  MainWindow.cpp  MainWindow.h  MiniBrowserLib.rc  MiniBrowserLibResource.h  MiniBrowserReplace.h  WebKitBrowserWindow.cpp  WebKitBrowserWindow.h  WinMain.cpp  stdafx.h
webkit-cmake/: BubblewrapSandboxChecks.cmake  DetectSSE2.cmake  FindATK.cmake  FindATKBridge.cmake  FindATSPI.cmake  FindAVIF.cmake  FindApple.cmake  FindBreakpad.cmake  FindBrotli.cmake  FindCairo.cmake  FindDawn.cmake  FindEGL.cmake  FindEnchant.cmake  FindEpoxy.cmake  FindFlite.cmake  FindGBM.cmake  FindGI.cmake  FindGIDocgen.cmake  FindGLIB.cmake  FindGLibCompileResources.cmake  FindGStreamer.cmake  FindGTK.cmake  FindGperf.cmake  FindHarfBuzz.cmake  FindHyphen.cmake  FindJPEGXL.cmake  FindJournald.cmake  FindLCMS2.cmake  FindLibBacktrace.cmake  FindLibDRM.cmake  FindLibGcrypt.cmake  FindLibInput.cmake  FindLibPSL.cmake  FindLibSoup.cmake  FindLibseccomp.cmake  FindLibsecret.cmake  FindLibtasn1.cmake  FindLibxkbcommon.cmake  FindManette.cmake  FindOpenGL.cmake  (+38 more)
webkit-includes/JavaScriptCore/: ARM64Assembler.h  AbstractMacroAssembler.h  AlignedMemoryAllocator.h  AllocationFailureMode.h  Allocator.h  AllocatorForMode.h  AllocatorInlines.h  ArgList.h  ArrayBuffer.h  ArrayBufferSharingMode.h  ArrayProfile.h  AuxiliaryBarrierInlines.h  BaselineJITRegisters.h  BigIntPrototype.h  BlockDirectoryInlines.h  BuiltinNames.h  ButterflyInlines.h  Bytecodes.h  CCallHelpers.h  CPU.h  CallFrame.h  CallLinkInfo.h  CellAttributes.h  CellContainer.h  CellContainerInlines.h  CodeBlock.h  CollectionScope.h  CollectorPhase.h  CommonIdentifiers.h  CompleteSubspace.h  CompleteSubspaceInlines.h  ConstraintConcurrency.h  ConstraintParallelism.h  ConstraintVolatility.h  DeleteAllCodeEffort.h  DestructionMode.h  DirectArguments.h  ExecutableAllocator.h  (+91 more)
(+379 files in other folders)
